# AdventOfCode

./: README.md
2018/01/ocaml/: dune  main.ml  mainA.ml  mainB.ml
2018/02/ocaml/: dune  mainA.ml  mainB.ml
2018/03/ocaml/: mainA.ml  mainB.ml
2018/04/ocaml/: mainA.ml  mainB.ml
2018/05/ocaml/: dune  mainA.ml  mainB.ml
2018/06/ocaml/: dune  mainA.ml  mainB.ml
2018/07/ocaml/: mainA.ml  mainB.ml
2018/08/ocaml/: dune  mainA.ml  mainB.ml
2018/25/ocaml/: dune  main.ml
2019/01/: 01A.el  01A.sh  01B.el  resultA.txt  resultB.txt
2019/02/: 02A.el  02B.el  resultA.txt
2019/03/ocaml/: dune  mainA.ml  mainB.ml
2019/04/ocaml/: mainA.ml  mainB.ml
2019/05/: resultA.txt  resultB.txt
2019/05/ocaml/: mainA.ml  mainB.ml
2019/06/ocaml/: dune  mainA.ml  mainB.ml
2019/07/ocaml/: mainA.ml  mainB.ml
2019/08/: resultB.txt
2019/08/ocaml/: mainA.ml  mainB.ml
2019/09/: resultA.txt
2019/09/ocaml/: mainA.ml  mainB.ml
2019/10/ocaml/: mainA.ml  mainB.ml
2019/11/: resultB.txt
2019/11/ocaml/: dune  mainA.ml  mainB.ml
2019/12/: resultB.txt
2019/12/ocaml/: mainA.ml  mainB.ml
2019/13/ocaml/: dune  mainA.ml  mainB.ml
2019/14/: resultB.txt
2019/14/ocaml/: dune  mainA.ml  mainB.ml
2019/15/: resultB.txt
2019/15/ocaml/: dune  (+2 more)
2019/16/: resultA.txt  resultB.txt
2019/17/: map  resultA.txt
2019/21/: resultA.txt  resultB.txt
2019/22/: resultB.txt
2019/24/: resultA.txt
2019/25/: resultA.txt
2019/intcode/: dune  intcode.ml  intcode.mli  runner.ml
2020/03/: resultB.txt
utils/: cArray.ml  cArray.mli  dune  util.ml  util.mli  utils.ml  utils.mli
(+30 files in other folders)
