(executable
 (name mainA)
 (modes byte exe)
 (modules MainA))

(rule
 (alias runA)
 (deps input.txt)
 (action
  (run ./mainA.exe)))

(executable
 (name mainB)
 (modes byte exe)
 (modules MainB)
 (libraries unix))

(rule
 (alias buildB)
 (deps mainB.exe)
 (action
  (run true)))

(rule
 (alias runB)
 (deps input.txt)
 (action
  (run ./mainB.exe)))
